--- a/index.Rmd
+++ b/index.Rmd
@@ -26,3 +26,5 @@ knitr::opts_chunk$set(echo = TRUE)
 * [Paige](http://spellkp.github.io)
 * [Cathryn](http://wheelercat.github.io)
 * [Samantha](http://samanthawidman.github.io)
+
+## The End
