--- a/index.Rmd
+++ b/index.Rmd
@@ -15,10 +15,10 @@ knitr::opts_chunk$set(echo = TRUE)
 * [Xan](http://xanhendrix.github.io)
 * [Mitch](http://mitchell-holman.github.io)
 * [Bowen](http://bowenjones.github.io)
-* [Hannah](http://laswhannah.github.io)
+* [Hannah](http://lawshannah.github.io)
 * [Kelly](http://kellyloucks.github.io)
 * [Andrew](http://andrewmartinsmith.github.io)
-* [Matt](http://mccaskey.github.io)
+* [Matt](http://mccaskeymj.github.io)
 * [Lauren](http://murrayln3.github.io)
 * [Sammy](http://sampshyk.github.io)
 * [David](http://davidross3.github.io)
